--- a/packages/fields/src/components/form-footer/form-footer.css
+++ b/packages/fields/src/components/form-footer/form-footer.css
@@ -1,11 +1,11 @@
 :host {
     display: flex;
-    gap: var(--spacing-2);
+    gap: var(--spacing-2, 16px);
     align-items: center;
     justify-content: flex-end;
     border-top: 2px solid var(--color-shade-40);
-    padding: var(--spacing-3) 0;
-    margin-top: var(--spacing-4);
+    padding: var(--spacing-3, 24px) 0;
+    margin-top: var(--spacing-4, 32px);
     position: sticky;
     bottom: var(--layout-body-bottom, 0px);
     background-color: var(--color-background);
